posiGen_FullsendBox/src/objects/Box__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>BoxAccess_Token__c</fullName>
        <label>BoxAccess Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Boxclient_Id__c</fullName>
        <label>Boxclient Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Boxclient_Secret__c</fullName>
        <label>Boxclient Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Boxrefresh_token__c</fullName>
        <label>Boxrefresh token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Job_Id__c</fullName>
        <label>Last Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>api_endpoint__c</fullName>
        <label>api endpoint</label>
        <type>Url</type>
    </fields>
    <label>Box</label>
</CustomObject>